# wop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  GOVERNANCE.md  INTEROP-MATRIX.md  LICENSE-DOCS  MAINTAINERS.md  NOTICE  PUBLISHING.md  QUICKSTART-10MIN.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  conformance-report.md  conformance-report.yml  spec-question.md  spec-question.yml
.github/workflows/: examples.yml  wop-publish.yml  wop-publish.yml.template  wop-spec.yml
RFCS/: 0000-template.md  0001-rfc-process.md  0002-runs-idempotency-retry.md  README.md
SECURITY/: invariants.yaml  threat-model-node-packs.md  threat-model-prompt-injection.md  threat-model-provider-policy.md  threat-model-secret-leakage.md
api/: asyncapi.yaml  openapi.yaml  redocly.yaml
conformance/: .gitignore  CHANGELOG.md  README.md  fixtures.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
conformance/fixtures/: conformance-approval.json  conformance-cancellable.json  conformance-cap-breach.json  conformance-capability-missing.json  conformance-channel-ttl.json  conformance-clarification.json  conformance-delay.json  conformance-failure.json  conformance-idempotent.json  conformance-identity.json  conformance-multi-node.json  (+5 more)
examples/: README.md
schemas/: README.md  capabilities.schema.json  channel-written-payload.schema.json  debug-bundle.schema.json  error-envelope.schema.json  node-pack-manifest.schema.json  run-event-payloads.schema.json  run-event.schema.json  run-options.schema.json  run-snapshot.schema.json  suspend-request.schema.json  workflow-definition.schema.json
scripts/: check-security-invariants.sh  sync-from-myndhyve.sh  wop-check-publish-metadata.sh  wop-check.sh
sdk/go/: README.md  (+6 more)
sdk/python/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/src/wop_client/: __init__.py  client.py  errors.py  sse.py  types.py
(+111 files in other folders)
