[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "wop-client"
version = "1.0.0"
description = "Python reference SDK for WOP-compliant servers. FINAL v1.0 — first PyPI publication tracked as G10 phase 2 (see PUBLISHING.md)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "WOP spec working group" }]
keywords = ["wop", "workflow", "orchestration", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero-dep policy mirrors the TypeScript SDK — keeps audit surface small
# and the package install lightweight. v0.1 uses stdlib `urllib` for HTTP
# and a hand-rolled SSE parser. v0.2 may add an optional `httpx` extra
# for async support.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://github.com/myndhyve/wop"
"Source" = "https://github.com/myndhyve/wop"
"Bug Tracker" = "https://github.com/myndhyve/wop/issues"
"Changelog" = "https://github.com/myndhyve/wop/blob/main/sdk/python/CHANGELOG.md"
"Spec corpus" = "https://github.com/myndhyve/wop/tree/main/spec/v1/"

[tool.hatch.build.targets.wheel]
packages = ["src/wop_client"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
